# SparrowOntology

./: .gitignore  .mcp.json  Cargo.toml  LICENSE  README.md  winchester-audit.md
.claude/: settings.json
.claude/hooks/: session-start-register.sh  session-stop-profile.sh  user-prompt-submit-inbox.sh
.github/workflows/: ci.yml  release.yml
crates/sparrowdb-ontology-cli/: Cargo.toml
crates/sparrowdb-ontology-cli/src/: lib.rs  main.rs
crates/sparrowdb-ontology-core/: Cargo.toml
crates/sparrowdb-ontology-core/src/: error.rs  hierarchy.rs  import.rs  init.rs  jsonld.rs  lib.rs  model.rs  namespace.rs  resolution.rs  snapshot.rs  turtle_import.rs  validation.rs
crates/sparrowdb-ontology-mcp/: Cargo.toml
crates/sparrowdb-ontology-mcp/src/: error.rs  lib.rs  main.rs
crates/sparrowdb-ontology-mcp/src/tools/: data.rs  mod.rs  schema.rs
docs/: PAGINATION.md  PAGINATION_IMPLEMENTATION.md  WORKPLAN.md  agent-world-model.md  mcp-reference.md  personal-ontology.md  research-ontology.md  schema-reference.md  team-ontology.md
skills/: sparrow-ontology.skill
tests/integration/: mod.rs  test_acceptance_criteria.rs  test_add_property.rs  test_alias_resolution.rs  test_cli_phase3.rs  test_foaf_import.rs  test_hierarchy.rs  test_import.rs  test_iri_field.rs  test_jsonld_export.rs  test_mcp_monitoring.rs  test_mcp_phase2.rs  test_pagination.rs  test_schema_snapshot.rs  test_schemaorg_import.rs  test_starter_templates.rs  test_turtle_import.rs  test_validation.rs  test_world_model.rs
