[workspace]
members = ["crates/sparrowdb-ontology-core", "crates/sparrowdb-ontology-mcp", "crates/sparrowdb-ontology-cli"]
resolver = "2"

# SPA-227: path patch restored — SPA-224 hotfix in 19bd3c7, SPA-136/137/138 in da4fc0f.
[patch."https://github.com/ryaker/SparrowDB"]
sparrowdb = { path = "/Users/ryaker/Dev/SparrowDB/crates/sparrowdb" }
sparrowdb-execution = { path = "/Users/ryaker/Dev/SparrowDB/crates/sparrowdb-execution" }
sparrowdb-common = { path = "/Users/ryaker/Dev/SparrowDB/crates/sparrowdb-common" }
sparrowdb-storage = { path = "/Users/ryaker/Dev/SparrowDB/crates/sparrowdb-storage" }
