[package]
name = "sparrowdb-ontology-cli"
version = "0.1.1"
edition = "2021"
description = "CLI for Sparrow Ontology — ontology-aware semantic layer over SparrowDB"
license = "MIT"
repository = "https://github.com/ryaker/SparrowOntology"
homepage = "https://github.com/ryaker/SparrowOntology"
documentation = "https://docs.rs/sparrowdb-ontology-cli"

[[bin]]
name = "sparrow-ontology"
path = "src/main.rs"

[lib]
name = "sparrowdb_ontology_cli"
path = "src/lib.rs"

[dependencies]
sparrowdb-ontology-core = { path = "../sparrowdb-ontology-core", version = "0.1" }
sparrowdb-ontology-mcp = { path = "../sparrowdb-ontology-mcp", version = "0.1" }
sparrowdb = "0.1.2"
sparrowdb-common = "0.1.2"
serde_json = "1"
clap = { version = "4", features = ["derive"] }
csv = "1"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "test_cli_phase3"
path = "../../tests/integration/test_cli_phase3.rs"
