[package]
name = "sparrowdb-ontology-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ontology semantic layer for SparrowDB"
repository = "https://github.com/sparrowdb/sparrowdb"

[dependencies]
sparrowdb = "0.1.2"
sparrowdb-execution = "0.1.2"
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = "0.4"

[dev-dependencies]
tempfile = "3"
