[package]
name = "sparrowdb-ontology-core"
version = "0.1.2"
edition = "2021"
description = "Ontology semantic layer for SparrowDB"
license = "MIT"
repository = "https://github.com/ryaker/SparrowOntology"
homepage = "https://github.com/ryaker/SparrowOntology"
documentation = "https://docs.rs/sparrowdb-ontology-core"

[dependencies]
# SparrowDB engine — published to crates.io (SPA-210, v0.1.1)
sparrowdb = "0.1.2"
# Sub-crate deps needed for QueryResult, Value(exec), Error, and Value(storage) types.
# sparrowdb does not re-export them yet — TODO: simplify in a future sparrowdb release.
# SPA-208: __SO_ prefix is protected at Cypher layer; we use WriteTx low-level API
# for seeding (bypasses Cypher-layer reservation check, which is correct behavior).
sparrowdb-execution = "0.1.2"
sparrowdb-common = "0.1.2"
sparrowdb-storage = "0.1.2"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
csv = "1"
serde_json = "1"

[[test]]
name = "test_world_model"
path = "../../tests/integration/test_world_model.rs"

[[test]]
name = "test_alias_resolution"
path = "../../tests/integration/test_alias_resolution.rs"

[[test]]
name = "test_validation"
path = "../../tests/integration/test_validation.rs"

[[test]]
name = "test_hierarchy"
path = "../../tests/integration/test_hierarchy.rs"

[[test]]
name = "test_add_property"
path = "../../tests/integration/test_add_property.rs"

[[test]]
name = "test_starter_templates"
path = "../../tests/integration/test_starter_templates.rs"

[[test]]
name = "test_import"
path = "../../tests/integration/test_import.rs"
