[package]
name = "sparrowdb-ontology-mcp"
version = "0.1.3"
edition = "2021"
description = "MCP server for Sparrow Ontology — ontology-aware semantic layer over SparrowDB"
license = "MIT"
repository = "https://github.com/ryaker/SparrowOntology"
homepage = "https://github.com/ryaker/SparrowOntology"
documentation = "https://docs.rs/sparrowdb-ontology-mcp"

[[bin]]
name = "sparrow-ontology-mcp"
path = "src/main.rs"

[lib]
name = "sparrowdb_ontology_mcp"
path = "src/lib.rs"

[dependencies]
sparrowdb-ontology-core = { path = "../sparrowdb-ontology-core", version = "0.1.4" }
sparrowdb = "0.1.7"
sparrowdb-execution = "0.1.7"
sparrowdb-common = "0.1.7"
sparrowdb-storage = "0.1.7"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8"

[dev-dependencies]
tempfile = "3"

[[test]]
name = "test_mcp_phase2"
path = "../../tests/integration/test_mcp_phase2.rs"

[[test]]
name = "test_mcp_monitoring"
path = "../../tests/integration/test_mcp_monitoring.rs"
